# sdict

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  mise.toml
.github/workflows/: ci.yml  docker.yml
src/: lib.rs  main.rs  spanishdict.rs
static/: robots.txt  site.webmanifest
templates/: 404.html  _search_form.html  base.html  error.html  home.html  results.html
tests/: routes_test.rs  spanishdict_test.rs
tests/fixtures/: comer.html  comer_examples.html
