[package]
name = "sdict"
version = "0.0.0-dev"
edition = "2024"
publish = false

[dependencies]
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6"
